h3 and p spacing - another fixing attempt

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -1,5 +1,8 @@
-h3, p {
-   margin: 0;
+h3{
+  margin-bottom: 0px;
+}
+p{
+  margin-top: 0px;
 }
 
 
